--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>org.esa.s3tbx</groupId>
     <artifactId>s3tbx-snow</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.01-SNAPSHOT</version>
     <packaging>nbm</packaging>    
     <name>S3TBX Snow Operator</name>
     <description>Provides snow properties from OLCI/SLSTR measurements.</description>
@@ -92,6 +92,12 @@
             <!--<artifactId>commons-math3</artifactId>-->
             <!--<version>3.6.1</version>-->
         <!--</dependency>-->
+
+        <dependency>
+        <groupId>net.finmath</groupId>
+        <artifactId>finmath-lib</artifactId>
+        <version>3.1.3</version>
+        </dependency>
     </dependencies>
 
     <repositories>
