--- a/pom.xml
+++ b/pom.xml
@@ -93,11 +93,11 @@
             <!--<version>3.6.1</version>-->
         <!--</dependency>-->
 
-        <dependency>
-        <groupId>net.finmath</groupId>
-        <artifactId>finmath-lib</artifactId>
-        <version>3.1.3</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>net.finmath</groupId>-->
+        <!--<artifactId>finmath-lib</artifactId>-->
+        <!--<version>3.1.3</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <repositories>
