--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,14 @@
 
     <groupId>org.esa.s3tbx</groupId>
     <artifactId>s3tbx-snow</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.2-SNAPSHOT</version>
     <packaging>nbm</packaging>    
     <name>S3TBX Snow Operator</name>
     <description>Provides snow properties from OLCI/SLSTR measurements.</description>
 	
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <snap.version>6.0.0</snap.version>
+        <snap.version>7.0.0-SNAPSHOT</snap.version>
     </properties>
 
     <dependencies>
