--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
 
     <groupId>org.esa.s3tbx</groupId>
     <artifactId>s3tbx-snow</artifactId>
-    <version>2.0.9-SNAPSHOT</version>
+    <version>2.0.10-SNAPSHOT</version>
     <packaging>nbm</packaging>    
-    <name>S3TBX Snow Operator</name>
-    <description>Provides snow properties from OLCI/SLSTR measurements.</description>
+    <name>S3TBX Snow Properties Processor</name>
+    <description>Provides snow properties from OLCI measurements.</description>
 	
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
