--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,14 @@
 
     <groupId>org.esa.s3tbx</groupId>
     <artifactId>s3tbx-snow</artifactId>
-    <version>2.3-SNAPSHOT</version>
-    <packaging>nbm</packaging>    
+    <version>3.0-SNAPSHOT</version>
+    <packaging>nbm</packaging>
     <name>S3TBX Snow Properties Processor</name>
     <description>Provides snow properties from OLCI measurements.</description>
-	
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <snap.version>7.0.0-SNAPSHOT</snap.version>
+        <snap.version>7.0.0</snap.version>
     </properties>
 
     <dependencies>
@@ -68,37 +68,47 @@
             <artifactId>snap-gpf</artifactId>
             <version>${snap.version}</version>
         </dependency>
-		
-		<dependency>
+
+        <dependency>
             <groupId>org.esa.s3tbx</groupId>
             <artifactId>s3tbx-olci-radiometry</artifactId>
-            <version>${snap.version}</version>
+            <version>7.0.0-SNAPSHOT</version>
         </dependency>
-		<dependency>
+        <dependency>
             <groupId>org.esa.s3tbx</groupId>
             <artifactId>s3tbx-rad2refl</artifactId>
             <version>${snap.version}</version>
         </dependency>
-		
-		<dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.apache.commons</groupId>-->
-            <!--<artifactId>commons-math3</artifactId>-->
-            <!--<version>3.6.1</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>Jama</groupId>
+            <artifactId>Jama</artifactId>
+            <version>1.0.3</version>
+        </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>net.finmath</groupId>-->
-        <!--<artifactId>finmath-lib</artifactId>-->
-        <!--<version>3.1.3</version>-->
-        <!--</dependency>-->
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>snap-repo-public</id>
+            <name>Public Maven Repository for SNAP</name>
+            <url>http://nexus.senbox.net/nexus/content/repositories/releases/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+        <snapshotRepository>
+            <id>snap-repo-public</id>
+            <name>Public Maven Snapshot Repository for SNAP</name>
+            <url>http://nexus.senbox.net/nexus/content/repositories/snapshots/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 
     <repositories>
         <repository>
@@ -167,7 +177,7 @@
                     <licenseFile>LICENSE.txt</licenseFile>
                 </configuration>
             </plugin>
-			<plugin>
+            <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.0.2</version>
                 <configuration>
